# msbuild

./: .Net-Core-MSBuild:-Building-Testing-and-Debugging.md  .NetCore.io  .bazelignore  .branch-freeze-smoke-test  .branch-freeze-smoke-test-2  .cliversion  .editorconfig  .exp-insertions.yml  .git-blame-ignore-revs  .gitattributes  .gitignore  .mcp.json  .opt-prof.yml  .sscignore  .toolversions  .vsconfig  .vsts-ci-richnav.yml  .vsts-ci.yml  .vsts-dotnet-ci.yml  .vsts-dotnet-exp-perf.yml  .vsts-dotnet-richnav.yml  .vsts-dotnet.yml  AGENTS.md  AUTHORS  B.out  BUILD.bazel  Before.Microsoft.Common.targets  Binary-Log.md  BootStrapMSBuild.proj  BootStrapMSbuildOnFullFramework.proj  BuildAndCopy.cmd  BuildToolsVersion.txt  Building-Testing-and-Debugging-on-.Net-Core-MSBuild.md  Building-Testing-and-Debugging-on-Full-Framework-MSBuild.md  Building-Testing-and-Debugging-on-Mono-MSBuild.md  Building-Testing-and-Debugging.md  Building-on-OS-X-and-Linux.md  CLIInstallationScenarios.md  CODEOWNERS  CONTRIBUTING.md  (+258 more)
.config/: git-merge-flow-config.jsonc  tsaoptions.json
.github/: 01_bugreport.md  CODEOWNERS  branch-freeze-allowlist.txt  ci-validation-mock.md  copilot-instructions.md  dependabot.yml  fabricbot.json  issue_template.md  pull_request_template.md
Documentation/: ProjectJsonToCSProj.md  README.md  addressing-incremental-compilation-warnings.md  beta-install-experience.md  cli-installation-scenarios.md  cli-prerequisites.md  developer-guide.md  dotnet-test-protocol.md  installation-scenarios.md  intro-to-cli.md  issue-filing-guide.md  known-issues.md  migration-issues.md  supported-os-matrix.md
Microsoft.NET.Build.Containers/: AmazonECRMessageHandler.cs  AuthHandshakeMessageHandler.cs  AuthHeaderCache.cs  BaseImageNotFoundException.cs  ContainerBuilder.cs  ContainerHelpers.cs  ContainerHttpException.cs  ContentStore.cs  CreateNewImage.Interface.cs  CreateNewImage.cs  CreateNewImageToolTask.cs  Descriptor.cs  DiagnosticMessage.cs  DockerLoadException.cs  Exceptions.cs  Globals.cs  Image.cs  ImageBuilder.cs  ImageConfig.cs  ImageReference.cs  KnownStrings.cs  Layer.cs  LocalDocker.cs  ManifestV2.cs  Microsoft.NET.Build.Containers.csproj  ParseContainerProperties.cs  Port.cs  README.md  ReferenceParser.cs  Registry.cs  VSHostObject.cs  net472Definitions.cs
Microsoft.NET.Build.Containers.IntegrationTests/: CapturingLogger.cs  CreateNewImageTests.cs  DockerRegistryManager.cs  DockerSupportsArchInlineData.cs  DockerTestsFixture.cs  EndToEndTests.cs  LayerEndToEndTests.cs  Microsoft.NET.Build.Containers.IntegrationTests.csproj  ParseContainerPropertiesTests.cs  ProjectInitializer.cs  RegistryTests.cs  TargetsTests.cs  TestSettings.cs  ToolsetUtils.cs  TransientTestFolder.cs
Microsoft.NET.Build.Containers.UnitTests/: ContainerHelpersTests.cs  DescriptorTests.cs  DiagnosticMessageTests.cs  DockerDaemonTests.cs  ImageBuilderTests.cs  Microsoft.NET.Build.Containers.UnitTests.csproj  RegistryTests.cs
Samples/: dir.props  dir.targets  dirs.proj
Sleep.1.0.0/: .signature.p7s
TestAssets/: NuGet.config
aot/: Directory.Build.props  Directory.Build.targets
azure-pipelines/:  vs-insertion.yml  .vsts-dotnet-build-jobs.yml  .vsts-dotnet-exp-perf.yml  WIFtoPATauth.yml  check-documentation-only-change.yml  cts-apply.yml  cts-collect.yml  quarantine.yml  vmr-sb-validation.yml  vs-insertion-experimental.yml  vs-insertion.yml
branding/: MSBuild-Logo.ai  README.md
buildpipeline/: DotNet-CLI-CentOS-x64.json  DotNet-CLI-opensuse13.2-x64.json  Dotnet-CLI-Debian8-x64.json  Dotnet-CLI-Fedora23-x64.json  Dotnet-CLI-OSX-x64.json  Dotnet-CLI-RHEL7-x64.json  Dotnet-CLI-Signing-Windows-x64.json  Dotnet-CLI-Signing-Windows-x86.json  Dotnet-CLI-Ubuntu14.04-x64.json  Dotnet-CLI-Ubuntu16.04-x64.json  pipeline.json
cli/: .vsts-ci.yml  Directory.Build.targets  README.md  netci.groovy  run-build.ps1  run-build.sh
config/: .gitignore  ChangeLog  Makefile.am
containerize/: ContainerizeCommand.cs  Program.cs  containerize.csproj
containerize.UnitTests/: ParserTests.cs
doc/: .gitignore  Makefile.am  make.texi
docs/: ContainerCustomization.md  DEMO.md  GettingStarted.md  INTEGRATED-DEMO.md  README.md  RegistryAuthentication.md  ZeroToContainer.md
documentation/: Build-Scenarios.md  Built-in-Properties.md  Built-in-Propeties.md  CHANGELOG.md  Changelog.md  Components 4.html  Components.html  Contributing.md  Deploy-MSBuild.md  High-level-overview.md  Home.md  Logging-behavior.md  Logging-behaviour.md  MSBuild-Coordinator.md  MSBuild-Server.md  MSBuild-scheduler.md  Multi-request-Target-Crosstalk.md  NETFramework-NGEN.md  Persistent-Problems.md  ProjectReference-Protocol.md  Property-tracking-capabilities.md  README.md  Remaining-Native-Interop.md  VS-Telemetry-Data.md  WhenGlobbingReturnsOriginalFilespec.md  assigning-msb-error-code.md  branch-freeze.md  consuming-nuget-package.md  cts.md  data-collection-systems.md  diagnosing-slow-builds.md  evaluation-profiling.md  high-level-introduction.md  release-checklist.md  release.md  remote-host-object.md  solution-parser.md
eng/: .vsts-dotnet-build-jobs.yml  AfterSigning.targets  Analyzers.props  BannedSymbols.txt  BootStrapMSBuild.props  BootStrapMSBuild.targets  BootStrapMsBuild.props  BootStrapMsBuild.targets  Build.props  CIBuild.cmd  CodeAnalysis.ruleset  Common.Test.globalconfig  Common.globalconfig  CommonTest.globalconfig  CredScanSuppressions.json  Directory.Packages.props  DotNetBuild.props  ExpandSDKTestPackages.ps1  GetBuildVersionStub.proj  MicrobuildTest.ps1  Package.props  Packages.props  ProducesNoOutput.Imports.props  ProducesNoOutput.Settings.props  Publishing.props  RestoreToolset.ps1  RestoreToolset.sh  SignCheckExclusionsFile.txt  Signing.props  SourceBuild.props  SourceBuildPrebuiltBaseline.xml  StubForDependabot.csproj  TestAssets.targets  TestMSBuild.targets  Tools.props  ValidatePackageVersions.sh  Version.Details.props  (+40 more)
w32/: .gitignore  Makefile.am  pathstuff.c
w32/compat/: dirent.c
w32/include/: dirent.h  pathstuff.h  sub_proc.h  w32err.h
w32/subproc/: NMakefile  build.bat  misc.c  proc.h  sub_proc.c  w32err.c
(+20253 files in other folders)
