# -*-Makefile-*-, or close enough
# Copyright (C) 2002-2012 Free Software Foundation, Inc.
# This file is part of GNU Make.
#
# GNU Make is free software; you can redistribute it and/or modify it under
# the terms of the GNU General Public License as published by the Free
# Software Foundation; either version 3 of the License, or (at your option)
# any later version.
#
# GNU Make is distributed in the hope that it will be useful, but WITHOUT ANY
# WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
# FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more
# details.
#
# You should have received a copy of the GNU General Public License along with
# this program.  If not, see <http://www.gnu.org/licenses/>.

EXTRA_DIST =	\
		codeset.m4 \
		dospaths.m4 \
		gettext.m4 \
		glibc21.m4 \
		iconv.m4 \
		intdiv0.m4 \
		intmax.m4 \
		inttypes-pri.m4 \
		inttypes.m4 \
		inttypes_h.m4 \
		isc-posix.m4 \
		isc-posix.m4 \
		lcmessage.m4 \
		lib-ld.m4 \
		lib-link.m4 \
		lib-prefix.m4 \
		longdouble.m4 \
		longlong.m4 \
		nls.m4 \
		po.m4 \
		printf-posix.m4 \
		progtest.m4 \
		signed.m4 \
		size_max.m4 \
		stdint_h.m4 \
		uintmax_t.m4 \
		ulonglong.m4 \
		wchar_t.m4 \
		wint_t.m4 \
		xsize.m4
